# quicklendx-protocol

quicklendx-contracts/: Cargo.toml
quicklendx-contracts/src/: invoice.rs  lib.rs  test.rs  test_business_kyc.rs  test_dispute.rs  test_insurance.rs  test_invoice_metadata.rs
quicklendx-contracts/src/test/: test_invoice_categories.rs
quicklendx-contracts/test_snapshots/test/: test_platform_fee_configuration.1.json
quicklendx-contracts/test_snapshots/test_bid/: test_updated_limit_enforced_in_bidding.1.json
quicklendx-contracts/test_snapshots/test_business_kyc/: test_complete_business_kyc_to_invoice_flow.1.json  test_rejected_business_resubmission_flow.1.json  test_verified_business_can_upload_invoice.1.json
quicklendx-contracts/test_snapshots/test_investor_kyc/test_investor_kyc/: test_bid_exceeding_investment_limit_fails.1.json  test_bid_within_investment_limit_succeeds.1.json  test_complete_investor_workflow.1.json  test_investor_without_kyc_cannot_bid.1.json  test_limit_update_applies_to_new_bids_only.1.json  test_multiple_investors_competitive_bidding.1.json  test_multiple_investors_different_limits.1.json  test_rejected_investor_cannot_bid.1.json  test_unverified_investor_cannot_bid.1.json  test_zero_amount_bid_fails_regardless_of_limit.1.json
quicklendx-contracts/test_snapshots/test_refund/: test_admin_can_trigger_refund.1.json  test_business_can_trigger_refund.1.json  test_cannot_refund_twice.1.json  test_cannot_refund_unfunded_invoice.1.json  test_unauthorized_caller_cannot_trigger_refund.1.json
